# wineprefixes-tool-rs

./: .gitignore  Cargo.toml  README.md  build  main.rs
build_files/: Cargo.toml  build  testing
src/: main.rs
src/modules/: config.rs
