[package]
name = "wineprefixes_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
structopt = { version = "0.3.26", default-features = false}


[[bin]]
name = "prefixes"
path = "../src/main.rs"
